--- a/src/Components/SignUpForm/SignUpForm.css
+++ b/src/Components/SignUpForm/SignUpForm.css
@@ -1,6 +1,16 @@
+button{
+  background: linear-gradient(to top, transparent 10%, rgb(42, 140,212)), 
+  radial-gradient(circle, rgb(42, 140,212), rgb(19, 125, 180));
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+}
+
 h1{
   font-weight: 400;
-  margin-top: 0;
+  margin: 0;
+  margin-bottom: 10px;
 }
 
 .input-label{
@@ -18,23 +28,13 @@ input{
 .already{
   height: 31px;
   padding-top: 10px;
-  background: -webkit-linear-gradient(to bottom,rgba(0,0,0,.14),rgba(0,0,0,.03) 3px,transparent);
-  background: linear-gradient(to bottom,rgba(0,0,0,.14),rgba(0,0,0,.03) 3px,transparent);
+  background: linear-gradient(to bottom, transparent 10%, white 100%),
+              radial-gradient(circle, rgb(235,235,235), white);
+  border: 10px lightgrey;
   z-index: 0;
   /* I took this directly from the actual amazon form */
   font-size: 11px;
   font-weight: 400;
-}
-
-.already::after{
-  display: block;
-  width: 100%;
-  height: 44px;
-  background-color: transparent;
-  background: -webkit-linear-gradient(to right,#fff,rgba(255,255,255,0),#fff);
-  background: linear-gradient(to right,#fff,rgba(255,255,255,0),#fff);
-  z-index: 1;
-  content: "";
 }
 
 .input-container{
@@ -43,7 +43,7 @@ input{
     line-height: normal;
     display: flex;
     flex-direction: column;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 }
 
 .disclaimer{
@@ -61,13 +61,18 @@ input{
   height: 488px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 .layout{
   font-family: 'Lato', sans-serif;
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.password-details{
+  font-size: 12px;
+  display: flex;
   align-items: center;
 }
 
