--- a/src/Components/Layout/ErrorMessage/ErrorMessage.css
+++ b/src/Components/Layout/ErrorMessage/ErrorMessage.css
@@ -7,11 +7,12 @@
 .container {
   border: 1px solid red;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   width: 346px;
   align-content: center;
   border-radius: 5px;
   margin-bottom: 15px;
+  padding: 20px 0;
 }
 
 .error-notice{
@@ -19,16 +20,19 @@
   flex-direction: row;
   justify-content: flex-start;
   align-content: center;
-  padding-right: 30px;
+  padding: 0 15px;
 }
 
 .warning{
   margin: 0;
   height: 30px;
-  color: red;
+  color: rgb(216, 45, 45);
+  font-size: 1.2em;
+  align-self: center;
 }
 
 .warning-message{
-  margin: 0;
+  margin: 5px 0;
+  font-size: .8em;
   align-self: center;
 }
